# Subjectivity-IA

./: CMakeLists.txt  LICENSE  Makefile  README.md  Subjectivity.test001.cpp  Subjectivity.test001.py  preversion001.cpp  preversion002.cpp  preversion666.cpp  test001.cpp
tash/: preinvestigation001.py
trash/: preinvestigation002.py  preinvestigation003.py  preversion666.cpp  test002.cpp
